[tool.poetry]
name = "chumpy"
version = "0.70"
description = "Autodifferentiation tool for Python."
authors = ["Paul Melnikow <github@paulmelnikow.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "*"
scipy = "*"
six = "*"
psutil = "^5.9.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
